--- a/client/src/components/Inputs/SelectableInput.scss
+++ b/client/src/components/Inputs/SelectableInput.scss
@@ -125,7 +125,7 @@
         position: absolute;
         top: 100%;
         left: 0;
-        z-index: 3;
+        z-index: 10;
         
         width: 100%;
         max-height: 400px;
